Version 0.2.x
-------------

Proxy
- Support for URL commands
- HTML debug info (to allow filter designers to troubleshoot their filters)

GUI
- Imported Proxomitron filters are activated in the edited configuration if they
  were active in the Proxomitron file.


--------------------------------------------------------------------------------
Version 0.2.4 (July 20th, 2005)
-------------

Engine
- URL pseudo-headers now always work (detection was case-sensitive)
- Improved processing (less function calls while scanning text)
- Bug fix: pattern "(f*)\1bar" was not matching "foobar"
- There is now only 1 buffer, shared by all filters (like in Proxomitron)
- The "Allow Multiple Match" indicator now has the same meaning as in Proxomitron

GUI
- Wider "active configuration" field on Monitor screen
- Better synchronization between filter edition window and config window
- Profile button in filter test dialog; shows input length, number of matches,
  average time per run, approximate data throughput in kbps

Proxy
- Fixed freezing on 304 responses
- SSL tunneling (https can now go through Proximodo, though not filtered)

Other
- Replaced many includes by forward declarations, to reduce dependencies
- Sources now compile with Visual C++

--------------------------------------------------------------------------------
Version 0.2.3 (Apr 20th, 2005)
-------------

Engine
- Bypass URL and URL Match now work like in Proxomitron
- Fixed $TYPE() which was causing hangings

Proxy
- Don't reorder or concatenate headers (cookies must not be concatenated!)
- Idle persistent connections expire after 10 seconds

GUI
- Created a monitoring screen, with checkboxes, statistics and abort button
- Can run any external program when Proximodo starts
- Opening default browser on start-up should now work fine under Linux
- Compatibility with wxWidgets 2.5.4
- Changed colors and font in Log window
- Simplified internal management of windows
- Fixed bad drag&drop in config tree

Other