@@ -1,7 +1,8 @@
 //------------------------------------------------------------------
 //
 //this file is part of Proximodo
-//Copyright (C) 2004 Antony BOUCHER ( kuruden@users.sourceforge.net )
+//Copyright (C) 2004-2005 Antony BOUCHER ( kuruden@users.sourceforge.net )
+//                        Paul Rupe ( prupe@users.sourceforge.net )
 //
 //This program is free software; you can redistribute it and/or
 //modify it under the terms of the GNU General Public License
@@ -31,6 +32,7 @@
 #include <string>
 #include <vector>
 #include <map>
+#include <deque>
 class CUrl;
 class CMatcher;
 class CFilter;
@@ -400,6 +402,10 @@ private:
     map<string, CNode*> nodes;          // bank of built nodes
     bool isEnd;
 
+    deque<CNode*> hashed[256];          // sublist of nodes that start with a
+                                        // constant char; indexed by first char
+    deque<CNode*> unhashed;             // nodes that do not start with a const
+
 public:
     CNode_List(const char*& reached, string name, CMatcher& matcher);
     ~CNode_List();
@@ -526,3 +532,4 @@ public:
 };
 
 #endif
+// vi:ts=4:sw=4:et
